# java_class_parser

./: Cargo.toml  README.md  build.rs
crates/itest-common/: Cargo.toml  build.rs
crates/itest-common/java/src/main/java/com/example/: Shape.java
crates/itest-common/src/: lib.rs
crates/java_class_parser/: Cargo.toml
crates/java_class_parser/examples/: read_bytes.rs
crates/java_class_parser/src/: constant_pool.rs  error.rs  inheritance.rs  lib.rs  structures.rs
crates/java_class_parser/src/constant_pool/: parser.rs  values.rs
crates/java_class_parser/src/structures/: attributes.rs  class.rs  class_entries.rs  fully_qualified_name.rs  signatures.rs
crates/java_class_parser/tests/: parse_jar.rs
crates/java_classpaths/: Cargo.toml
crates/java_classpaths/src/: lib.rs
crates/java_classpaths/tests/: read_files_test.rs
java/src/main/java/com/example/: Rectangle.java  Shape.java  Square.java
src/: constant_pool.rs  error.rs  lib.rs  raw_java_class.rs  structures.rs  utility.rs
src/constant_pool/: parser.rs  values.rs
src/java/: Rectangle.java  Square.java
src/structures/: attributes.rs  class.rs  class_entries.rs  signatures.rs
tests/: parse_class.rs  parse_jar.rs
tests/common/: mod.rs
