[package]
name = "java_class_parser"
description = "provides a way of easily parsing and analyzing java classes"
authors = ["joshua radin <jradin16@gmail.com>"]
repository = "https://github.com/joshradin/java_class_parser"
license-file = "license"
version = "0.0.1"
edition = "2021"
rust-version = "1.65"
exclude = ["java"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
nom = "7.1.1"
thiserror = "1.0.37"
zip = "0.6.3"

[build-dependencies]
fs_extra = "1.2.0"
walkdir = "2.3.2"
