[package]
name = "java_class_parser"
version = "0.0.2"
description = "provides a way of easily parsing and analyzing java classes"
license.workspace = true
authors.workspace = true
repository.workspace = true

edition.workspace = true
rust-version = "1.65"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
java-locator = "0.1.2"
nom = "7.1.1"
petgraph = "0.6.2"
thiserror = "1.0.37"
zip = "0.6.3"

[dev-dependencies]
itest-common = { path = "../itest-common" }

