[package]
name = "java_classpaths"
description = "Provides useful functions and mechanisms for inspecting java classpaths"
authors.workspace = true
license.workspace = true
version = "0.0.2"
edition = "2021"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
static_assertions = "1.1.0"
url = "2.3.1"
zip = "0.6.3"

[dev-dependencies]
itest-common = { path = "../itest-common" }
